marquee 텍스트 작업

--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -1,16 +1,30 @@
 @font-face {
-  font-family: "Jalnan Gothic";
+  font-family: "Montserrat";
   font-style: normal;
-  font-weight: 400;
+  font-weight: 700;
   font-display: swap;
-  src: url(JalnanGothic.woff2) format("woff2");
+  src: url(Montserrat-Bold.woff) format("woff");
 }
 @font-face {
-  font-family: "Jalnan Gothic";
+  font-family: "Montserrat";
   font-style: normal;
-  font-weight: 400;
+  font-weight: 700;
   font-display: swap;
-  src: url(JalnanGothic.ttf) format("truetype");
+  src: url(Montserrat-Bold.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+  src: url(Montserrat-ExtraBold.woff) format("woff");
+}
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+  src: url(Montserrat-ExtraBold.ttf) format("truetype");
 }
 
 @font-face {
