--- a/src/app/_styles/tailwind.css
+++ b/src/app/_styles/tailwind.css
@@ -50,6 +50,8 @@
     overflow-x: hidden;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: subpixel-antialiased;
+    height: 100%;
+    overflow: hidden;
   }
   html {
     font-size: 16px;
@@ -60,7 +62,7 @@
     line-height: normal;
     color: var(--gray-9);
     touch-action: pan-x pan-y;
-    cursor: url('/images/window.svg') 16 16, auto;
+    cursor: url("/images/window.svg"), auto;
   }
   p {
     margin: 0;
