--- a/src/app/main/main.module.scss
+++ b/src/app/main/main.module.scss
@@ -76,11 +76,7 @@
 
 .section2 {
   > div {
-    padding: 180px 100px 210px 100px;
-  }
-
-  .h1-wrap {
-    margin-top: 180px;
+    padding: 140px 100px 210px 100px;
   }
 
   h1 {
@@ -156,7 +152,7 @@
 
       .dot-list {
         @extend %dot-list;
-        margin-top: 77px;
+        margin-top: 90px;
       }
     }
   }
@@ -164,10 +160,13 @@
 
 .section3 {
   > div {
-    padding: 100px 100px 160px 100px;
+    padding: 150px 100px 200px 100px;
   }
 
   h1 {
+    @extend %flex-col;
+    align-items: center;
+    gap: 12px;
     font-family: var(--font-display);
     font-weight: 700;
     font-size: var(--h2);
@@ -175,6 +174,14 @@
     letter-spacing: -1.12px;
     color: var(--black);
     text-align: center;
+
+    &:before {
+      content: "";
+      display: block;
+      width: 24px;
+      height: 20px;
+      background: url("/images/triangle-title.svg") no-repeat center;
+    }
   }
 
   .box-list {
@@ -219,13 +226,17 @@
 }
 
 .section4 {
-  @extend %flex-col;
-  // background-color: var(--primary);
-  background: url("/images/bg-red.png") no-repeat center/cover;
   height: var(--100vh);
-  justify-content: center;
-  align-items: center;
-  gap: 80px;
+  overflow: hidden;
+
+  > div {
+    @extend %flex-col;
+    background: url("/images/bg-red.png") no-repeat center/cover, black;
+    height: var(--100vh);
+    justify-content: center;
+    align-items: center;
+    gap: 80px;
+  }
 
   .triangle-wrap {
     width: 435px;
@@ -274,9 +285,12 @@
 }
 
 .section5 {
-  @extend %flex-center;
-  position: relative;
-  height: var(--100vh);
+  .section-wrap {
+    @extend %flex-center;
+    position: relative;
+    height: var(--100vh);
+    pointer-events: none;
+  }
 
   .text {
     // position: relative;
@@ -289,12 +303,23 @@
     text-align: center;
 
     h1 {
+      @extend %flex-col;
+      align-items: center;
+      gap: 12px;
       font-family: var(--font-display);
       font-size: var(--h2);
       font-weight: 700;
       line-height: var(--140lh);
       letter-spacing: -1.12px;
       color: var(--white);
+
+      &:before {
+        content: "";
+        display: block;
+        width: 24px;
+        height: 20px;
+        background: url("/images/triangle-title.svg") no-repeat center;
+      }
     }
 
     p {
@@ -316,6 +341,7 @@
       font-weight: 700;
       color: var(--white);
       background-color: var(--primary);
+      pointer-events: auto;
     }
   }
 
@@ -334,14 +360,14 @@
     &:before {
       position: absolute;
       z-index: 1;
-      top: -5%;
-      left: -5%;
+      top: 0;
+      left: 0;
       content: "";
       display: block;
-      width: 110%;
-      height: 110%;
+      width: 100%;
+      height: 100%;
       background: rgba(0, 0, 0, 0.6);
-      // mix-blend-mode: multiply;
+      mix-blend-mode: multiply;
     }
   }
 
@@ -363,8 +389,24 @@
 }
 
 .footer {
-  height: 228px;
+  position: relative;
+  top: -2px;
   background-color: var(--gray-8);
+
+  &:before {
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--gray-8);
+  }
+
+  > div {
+    height: 228px;
+  }
 }
 
 .logo-bg {
@@ -418,7 +460,7 @@
     font-family: var(--font-display);
     font-size: 220px;
     font-weight: 700;
-    -webkit-text-stroke: 1px var(--black);
+    -webkit-text-stroke: 2px var(--black);
     color: var(--transparent);
   }
 }
@@ -431,7 +473,7 @@
   width: 30px; /* 커서 크기 */
   height: 30px;
   pointer-events: none; /* 마우스 이벤트 방지 */
-  transition: all 0.2s ease-out; /* 부드럽게 이동 */
+  transition: all 0.1s ease-out; /* 부드럽게 이동 */
   will-change: transform; /* 성능 최적화 */
   background: url("/images/logo.svg") no-repeat center;
   margin: -15px;
@@ -454,5 +496,22 @@
     width: 200px;
     aspect-ratio: 1 / 1;
     background-color: pink;
+  }
+}
+
+.scroll-down {
+  @extend %flex-col;
+  align-items: center;
+  gap: 4px;
+  margin-top: 82px;
+
+  span {
+    font-size: var(--text-xs);
+    font-weight: 700;
+    line-height: var(--140lh);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: -0.32px;
+    color: var(--black);
   }
 }
