이미지 추가 및 푸터 작업

--- a/src/app/_styles/tailwind.css
+++ b/src/app/_styles/tailwind.css
@@ -62,7 +62,10 @@
     color: var(--gray-9);
     touch-action: pan-x pan-y;
     cursor: none;
-    /* cursor: url("/images/window.svg"), auto; */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
   p {
     margin: 0;
