--- a/src/app/main/main.module.scss
+++ b/src/app/main/main.module.scss
@@ -197,10 +197,11 @@
     }
 
     div {
+      position: relative;
       width: 100%;
       height: 372px;
       border-radius: 24px;
-      background-color: var(--gray-2);
+      overflow: hidden;
     }
 
     p {
@@ -332,16 +333,17 @@
     }
 
     button {
-      padding: 32px 40px;
-      border-radius: 150px;
+      padding: 24px 40px;
+      border-radius: 100px;
       display: inline-flex;
       align-items: center;
       gap: 16px;
-      font-size: var(--h3);
+      font-size: var(--h4);
       font-weight: 700;
       color: var(--white);
       background-color: var(--primary);
       pointer-events: auto;
+      letter-spacing: -0.48px;
     }
   }
 
@@ -390,8 +392,11 @@
 
 .footer {
   position: relative;
+  display: flex;
+  gap: 120px;
   top: -2px;
   background-color: var(--gray-8);
+  padding: 60px 100px;
 
   &:before {
     position: absolute;
@@ -404,8 +409,47 @@
     background-color: var(--gray-8);
   }
 
-  > div {
-    height: 228px;
+  .name {
+    font-size: var(--text-lg);
+    font-weight: 700;
+    color: var(--primary);
+  }
+
+  .address {
+    @extend %flex-col;
+    gap: 12px;
+
+    p {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      font-size: var(--text-sm);
+      font-weight: 500;
+      line-height: var(--140lh);
+      letter-spacing: -0.4px;
+      color: var(--gray-3);
+
+      span {
+        color: var(--gray-4);
+      }
+    }
+
+    div {
+      display: flex;
+      align-items: center;
+      gap: 40px;
+    }
+  }
+
+  .copyright {
+    position: absolute;
+    top: 60px;
+    right: 100px;
+    font-size: var(--text-sm);
+    font-weight: 500;
+    line-height: var(--140lh);
+    letter-spacing: -0.4px;
+    color: var(--gray-4);
   }
 }
 
