--- a/src/app/_styles/main.module.scss
+++ b/src/app/_styles/main.module.scss
@@ -1,12 +1,31 @@
+// 기본값 세팅
 %flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+%flex-center-align {
+  display: flex;
+  align-items: center;
+}
+
 %flex-col {
   display: flex;
   flex-direction: column;
+}
+
+%flex-col-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+%flex-col-center-align {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 %dot-list {
@@ -32,7 +51,7 @@
       display: block;
       width: 4px;
       height: 4px;
-      border-radius: 100px;
+      border-radius: var(--rounded-full);
       background-color: var(--gray-6);
       transition: all 0.3s ease;
     }
@@ -45,16 +64,14 @@
 }
 
 .section1 {
-  > div {
-    @extend %flex-center;
+  .section-inner {
+    @extend %flex-col-center;
     height: var(--100vh);
     background-color: var(--black);
   }
 
-  div {
-    @extend %flex-col;
-    justify-content: center;
-    align-items: center;
+  .text {
+    @extend %flex-col-center;
   }
 
   h1 {
@@ -62,6 +79,7 @@
     font-size: var(--h2);
     font-weight: 800;
     line-height: var(--140lh);
+    letter-spacing: -1.12px;
     color: var(--white);
     margin: 44px 0 12px 0;
   }
@@ -70,12 +88,13 @@
     font-size: var(--text-md);
     font-weight: 400;
     line-height: var(--140lh);
+    letter-spacing: -0.56px;
     color: var(--white);
   }
 }
 
 .section2 {
-  > div {
+  .section-inner {
     padding: 140px 100px 210px 100px;
   }
 
@@ -99,7 +118,7 @@
       @extend %flex-col;
       position: relative;
       padding: 50px 32px;
-      border-radius: 20px;
+      border-radius: var(--rounded);
       background-color: var(--gray-1);
       transition: all 0.3s ease;
 
@@ -126,6 +145,11 @@
         height: 48px;
       }
 
+      .dot-list {
+        @extend %dot-list;
+        margin-top: 90px;
+      }
+
       &:hover {
         background-color: var(--primary);
 
@@ -149,27 +173,38 @@
           }
         }
       }
+    }
+  }
 
-      .dot-list {
-        @extend %dot-list;
-        margin-top: 90px;
-      }
+  .scroll-down {
+    @extend %flex-col;
+    align-items: center;
+    gap: 4px;
+    margin-top: 82px;
+
+    span {
+      font-size: var(--text-xs);
+      font-weight: 700;
+      line-height: var(--140lh);
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: -0.32px;
+      color: var(--black);
     }
   }
 }
 
 .section3 {
-  > div {
+  .section-inner {
     padding: 150px 100px 200px 100px;
   }
 
   h1 {
-    @extend %flex-col;
-    align-items: center;
+    @extend %flex-col-center-align;
     gap: 12px;
     font-family: var(--font-display);
-    font-weight: 700;
     font-size: var(--h2);
+    font-weight: 700;
     line-height: var(--140lh);
     letter-spacing: -1.12px;
     color: var(--black);
@@ -191,8 +226,7 @@
     margin-top: 92px;
 
     > li {
-      @extend %flex-col;
-      align-items: center;
+      @extend %flex-col-center-align;
       text-align: center;
     }
 
@@ -200,7 +234,7 @@
       position: relative;
       width: 100%;
       height: 372px;
-      border-radius: 24px;
+      border-radius: var(--rounded-lg);
       overflow: hidden;
     }
 
@@ -230,13 +264,11 @@
   height: var(--100vh);
   overflow: hidden;
 
-  > div {
-    @extend %flex-col;
-    background: url("/images/bg-red.png") no-repeat center/cover, black;
+  .section-wrap {
+    @extend %flex-col-center;
     height: var(--100vh);
-    justify-content: center;
-    align-items: center;
     gap: 80px;
+    background: url("/images/bg-red.png") no-repeat center/cover, black;
   }
 
   .triangle-wrap {
@@ -262,16 +294,16 @@
     span {
       display: block;
       font-family: var(--font-display);
-      font-weight: 700;
       font-size: var(--h4);
+      font-weight: 700;
       line-height: var(--140lh);
       letter-spacing: -0.48px;
     }
 
     h1 {
       font-family: var(--font-display);
-      font-weight: 700;
       font-size: var(--h2);
+      font-weight: 700;
       line-height: 78px;
       letter-spacing: -1.12px;
     }
@@ -286,7 +318,7 @@
 }
 
 .section5 {
-  .section-wrap {
+  .section-inner {
     @extend %flex-center;
     position: relative;
     height: var(--100vh);
@@ -294,18 +326,11 @@
   }
 
   .text {
-    // position: relative;
-    // z-index: 1;
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
-    @extend %flex-col;
-    align-items: center;
+    @extend %flex-col-center-align;
     text-align: center;
 
     h1 {
-      @extend %flex-col;
-      align-items: center;
+      @extend %flex-col-center-align;
       gap: 12px;
       font-family: var(--font-display);
       font-size: var(--h2);
@@ -334,7 +359,7 @@
 
     button {
       padding: 24px 40px;
-      border-radius: 100px;
+      border-radius: var(--rounded-full);
       display: inline-flex;
       align-items: center;
       gap: 16px;
@@ -375,98 +400,21 @@
 
   .bg {
     background: url("/images/bg.png");
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
     position: absolute;
     width: 105%;
     height: 105%;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     transition: all 1s linear;
   }
 }
 
-.footer {
-  position: relative;
-  display: flex;
-  gap: 120px;
-  top: -2px;
-  background-color: var(--gray-8);
-  padding: 60px 100px;
-
-  &:before {
-    position: absolute;
-    bottom: -4px;
-    left: 0;
-    content: "";
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: var(--gray-8);
-  }
-
-  .name {
-    font-size: var(--text-lg);
-    font-weight: 700;
-    color: var(--primary);
-  }
-
-  .address {
-    @extend %flex-col;
-    gap: 12px;
-
-    p {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      font-size: var(--text-sm);
-      font-weight: 500;
-      line-height: var(--140lh);
-      letter-spacing: -0.4px;
-      color: var(--gray-3);
-
-      span {
-        color: var(--gray-4);
-      }
-    }
-
-    div {
-      display: flex;
-      align-items: center;
-      gap: 40px;
-    }
-  }
-
-  .copyright {
-    position: absolute;
-    top: 60px;
-    right: 100px;
-    font-size: var(--text-sm);
-    font-weight: 500;
-    line-height: var(--140lh);
-    letter-spacing: -0.4px;
-    color: var(--gray-4);
-  }
-}
-
-.logo-bg {
-  position: fixed;
-  z-index: -1;
-  top: 50%;
-  right: -20px;
-  transform: translateY(-50%);
-}
-
 .section6 {
+  @extend %flex-center;
   position: relative;
   height: var(--100vh);
-  display: flex;
-  justify-content: center;
-  align-items: center;
   // background-color: var(--black);
 
   .marquee-container {
@@ -507,6 +455,86 @@
     -webkit-text-stroke: 2px var(--black);
     color: var(--transparent);
   }
+
+  .test {
+    @extend %flex-center;
+    gap: 20px;
+
+    li {
+      width: 200px;
+      aspect-ratio: 1 / 1;
+      background-color: pink;
+    }
+  }
+}
+
+.footer {
+  position: relative;
+  top: -2px;
+  display: flex;
+  gap: 120px;
+  background-color: var(--gray-8);
+  padding: 60px 100px;
+
+  &:before {
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 8px;
+    background-color: var(--gray-8);
+  }
+
+  .name {
+    font-size: var(--text-lg);
+    font-weight: 700;
+    color: var(--primary);
+  }
+
+  .address {
+    @extend %flex-col;
+    gap: 12px;
+
+    p {
+      @extend %flex-center-align;
+      gap: 20px;
+      font-size: var(--text-sm);
+      font-weight: 500;
+      line-height: var(--140lh);
+      letter-spacing: -0.4px;
+      color: var(--gray-3);
+
+      span {
+        color: var(--gray-4);
+      }
+    }
+
+    div {
+      @extend %flex-center-align;
+      gap: 40px;
+    }
+  }
+
+  .copyright {
+    position: absolute;
+    top: 60px;
+    right: 100px;
+    font-size: var(--text-sm);
+    font-weight: 500;
+    line-height: var(--140lh);
+    letter-spacing: -0.4px;
+    color: var(--gray-4);
+  }
+}
+
+.logo-bg {
+  position: fixed;
+  z-index: -1;
+  top: 50%;
+  right: -20px;
+  transform: translateY(-50%);
 }
 
 .custom-cursor {
@@ -514,48 +542,18 @@
   z-index: 9999;
   top: 0;
   left: 0;
-  width: 30px; /* 커서 크기 */
+  width: 30px;
   height: 30px;
-  pointer-events: none; /* 마우스 이벤트 방지 */
-  transition: all 0.1s ease-out; /* 부드럽게 이동 */
-  will-change: transform; /* 성능 최적화 */
+  pointer-events: none;
+  transition: all 0.1s ease-out;
+  will-change: transform;
   background: url("/images/logo.svg") no-repeat center;
   margin: -15px;
   mix-blend-mode: difference;
 
   &.hovered {
-    width: 50px; /* 커서 크기 변경 */
+    width: 50px;
     height: 50px;
     margin: -25px;
-  }
-}
-
-.test {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-
-  li {
-    width: 200px;
-    aspect-ratio: 1 / 1;
-    background-color: pink;
-  }
-}
-
-.scroll-down {
-  @extend %flex-col;
-  align-items: center;
-  gap: 4px;
-  margin-top: 82px;
-
-  span {
-    font-size: var(--text-xs);
-    font-weight: 700;
-    line-height: var(--140lh);
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: -0.32px;
-    color: var(--black);
   }
 }
