--- a/src/app/_styles/main.module.scss
+++ b/src/app/_styles/main.module.scss
@@ -416,14 +416,53 @@
   @extend %flex-center;
   position: relative;
   height: var(--100vh);
-  // background-color: var(--black);
+  background-color: var(--black);
+
+  .text-btn {
+    @extend %flex-col-center-align;
+    text-align: center;
+
+    h1 {
+      @extend %flex-col-center-align;
+      gap: 12px;
+      font-family: var(--font-display);
+      font-size: var(--h2);
+      font-weight: 700;
+      line-height: var(--140lh);
+      letter-spacing: -1.12px;
+      color: var(--white);
+      margin-bottom: 32px;
+
+      &:before {
+        content: "";
+        display: block;
+        width: 24px;
+        height: 20px;
+        background: url("/images/triangle-title.svg") no-repeat center;
+      }
+    }
+
+    button {
+      padding: 24px 40px;
+      border-radius: var(--rounded-full);
+      display: inline-flex;
+      align-items: center;
+      gap: 16px;
+      font-size: var(--h4);
+      font-weight: 700;
+      color: var(--white);
+      background-color: var(--primary);
+      pointer-events: auto;
+      letter-spacing: -0.48px;
+    }
+  }
 
   .marquee-container {
     position: absolute;
     overflow: hidden;
     white-space: nowrap;
     width: 100%;
-    height: 268px;
+    height: 195px;
 
     &.top {
       top: 0;
@@ -445,16 +484,16 @@
     display: flex;
     white-space: nowrap;
     will-change: transform;
-  }
 
-  .text {
-    display: inline-block;
-    padding-right: 30px;
-    font-family: var(--font-display);
-    font-size: 220px;
-    font-weight: 700;
-    -webkit-text-stroke: 2px var(--black);
-    color: var(--transparent);
+    .text {
+      display: inline-block;
+      padding-right: 30px;
+      font-family: var(--font-display);
+      font-size: 160px;
+      font-weight: 700;
+      -webkit-text-stroke: 2px var(--white);
+      color: var(--transparent);
+    }
   }
 
   .test {
@@ -546,7 +585,7 @@
   width: 30px;
   height: 30px;
   pointer-events: none;
-  transition: all 0.1s ease-out;
+  // transition: all 0.1s ease-out;
   will-change: transform;
   background: url("/images/logo.svg") no-repeat center;
   margin: -15px;
@@ -560,6 +599,136 @@
 }
 
 // 테스트
+.section2-test {
+  .section-inner {
+    padding: 140px 100px 210px 100px;
+  }
+
+  h1 {
+    font-family: var(--font-display);
+    font-size: var(--h1);
+    font-weight: 800;
+    line-height: var(--140lh);
+    letter-spacing: -1.84px;
+    text-transform: uppercase;
+    color: var(--black);
+  }
+
+  .open-swiper {
+    position: relative;
+    flex: 1;
+    margin-top: 122px;
+  }
+
+  .open-swiper-wrapper {
+    position: relative;
+  }
+
+  .open-swiper-slide {
+    @extend %flex-col;
+    position: relative;
+    padding: 50px 32px;
+    border-radius: var(--rounded);
+    background-color: var(--gray-1);
+    transition: var(--transition);
+
+    > svg {
+      path {
+        transition: var(--transition);
+      }
+    }
+
+    p {
+      font-family: var(--font-display);
+      font-size: var(--text-lg);
+      font-weight: 700;
+      letter-spacing: -0.64px;
+      transition: var(--transition);
+      margin-top: 20px;
+    }
+
+    button {
+      position: absolute;
+      top: 50px;
+      right: 32px;
+      width: 48px;
+      height: 48px;
+    }
+
+    .dot-list {
+      @extend %dot-list;
+      margin-top: 90px;
+    }
+
+    &:hover {
+      background-color: var(--primary);
+
+      svg {
+        path {
+          fill: var(--white);
+        }
+      }
+
+      p {
+        color: var(--white);
+      }
+
+      .dot-list {
+        li {
+          color: var(--white);
+
+          &:before {
+            background-color: var(--white);
+          }
+        }
+      }
+    }
+  }
+
+  .open-swiper-nav-prev {
+    position: absolute;
+    top: 50%;
+    left: 4px;
+    z-index: 1;
+    display: none;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    background-color: var(--gray-3);
+    border-radius: var(--rounded-full);
+  }
+
+  .open-swiper-nav-next {
+    position: absolute;
+    top: 50%;
+    right: 4px;
+    z-index: 1;
+    display: none;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    background-color: var(--gray-3);
+    border-radius: var(--rounded-full);
+  }
+
+  .scroll-down {
+    @extend %flex-col;
+    align-items: center;
+    gap: 4px;
+    margin-top: 82px;
+
+    span {
+      font-size: var(--text-xs);
+      font-weight: 700;
+      line-height: var(--140lh);
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: -0.32px;
+      color: var(--black);
+    }
+  }
+}
+
 .section3-test {
   .section-inner {
     display: flex;
@@ -575,8 +744,17 @@
       font-size: var(--h2);
       font-weight: 700;
       line-height: var(--140lh);
-      letter-spacing: -1.12px;
+      letter-spacing: -1.28px;
       color: var(--black);
+    }
+
+    p {
+      font-size: var(--text-sm);
+      font-weight: 500;
+      line-height: var(--140lh);
+      letter-spacing: -0.4px;
+      color: var(--gray-6);
+      margin-top: 32px;
     }
   }
 
@@ -657,9 +835,13 @@
     }
 
     &-active {
+      // --height: 748px;
+      // --aspect-ratio: 3 / 4;
+
       // width: 534px;
-      height: 748px;
-      // aspect-ratio: 16 / 9;
+      // height: 748px;
+      // height: var(--height);
+      // width: calc(var(--height) * (var(--aspect-ratio))) !important;
 
       .item {
         gap: 24px;
@@ -672,6 +854,15 @@
           font-size: var(--text-sm);
         }
       }
+    }
+  }
+}
+
+@media all and (max-width: 500px) {
+  .section2-test {
+    .open-swiper-nav-prev,
+    .open-swiper-nav-next {
+      display: block;
     }
   }
 }
